<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Haushalt</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Das Menü ist geöffnet</string>
    <string name="drawer_close">Das Menü wurde geschlossen</string>
    <string name="drawer_title">Menü</string>
    <string name="household_login_name">Haushalt</string>
    <string name="household_login_passwd">Passwort</string>
    <string name="household_login_login">Login</string>
    <string name="household_login_remember_login">Eingeloggt bleiben</string>
    <string name="household_login_register">Neuer Haushalt</string>
    <string name="title_activity_household_register">HouseholdRegisterActivity</string>
    <string name="household_register_name">Name</string>
    <string name="household_register_register">Registrieren</string>
    <string name="household_register_repeatPasswd">Passwort wiederholen</string>
    <string name="household_register_passwd">Passwort</string>
    <string name="register_status_message">Verfügbarkeit wird überprüft</string>
    <string name="household_register_cancel">Abbrechen</string>
    <string name="error_password_not_match">Passwörter stimmen nicht überein</string>
    <string name="error_name_exists">Name ist schon vergeben</string>
    <string name="user_login_title">Benutzer - Login</string>
    <string name="user_login_name">Benutzername</string>
    <string name="user_login_register">Neuer Benutzer</string>
    <string name="user_login_passwd">Passwort</string>
    <string name="user_login_remember">Eingeloggt bleiben</string>
    <string name="user_login_login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
