<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <GridLayout
        android:id="@+id/GridLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal" >

        <Space
            android:layout_column="0"
            android:layout_gravity="fill_vertical"
            android:layout_row="0" />

        <Space
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_row="1" />

        <EditText
            android:id="@+id/editText1"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="1"
            android:ems="10"
            android:hint="@string/household_login_name" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editText2"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            android:layout_row="2"
            android:ems="10"
            android:hint="@string/household_login_passwd"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/household_login_remember"
            android:layout_column="1"
            android:layout_gravity="left|bottom"
            android:layout_row="3"
            android:text="@string/household_login_remember_login" />

        <Button
            android:id="@+id/household_login_login"
            android:layout_column="2"
            android:layout_gravity="right|top"
            android:layout_row="3"
            android:text="@string/household_login_login" />

    </GridLayout>

</RelativeLayout>
