<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_login_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <merge
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/user_login_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/user_login_status_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_progress_signing_in" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/user_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/user_login_register"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_login_register" />

                <EditText
                    android:id="@+id/user_login_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/user_login_name" >

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/user_login_passwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/user_login_passwd"
                    android:inputType="textPassword" />

                <CheckBox
                    android:id="@+id/user_login_remember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_login_remember" />

                <Button
                    android:id="@+id/user_login_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_login_login" />
            </LinearLayout>
        </ScrollView>
    </merge>

</FrameLayout>
